# fireblocks-solana-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  check.yml  pages.yml  release.yml  test.yml
cli-tests/: cleanup.sh  create-token-legacy.sh  create-token.sh  create-token22.sh  diff.sh  keys.sh  lookup.sh  nonce.json  nonce.sh  program-memo.json  program.sh  stake.sh  test.sh  token.json
crates/clap-utils/: Cargo.toml
crates/clap-utils/src/: input_parsers.rs  input_validators.rs  keypair.rs
crates/clap-v3-utils/: Cargo.toml
crates/clap-v3-utils/src/: input_validators.rs  keypair.rs
crates/clap-v3-utils/src/input_parsers/: mod.rs  signer.rs
crates/cli/: Cargo.toml
crates/cli-config/: Cargo.toml
crates/cli-output/: Cargo.toml
crates/cli-output/src/: cli_output.rs  display.rs
crates/cli/src/: address_lookup_table.rs  checks.rs  cli.rs  cluster_query.rs  compute_budget.rs  feature.rs  inflation.rs  lib.rs  main.rs  memo.rs  nonce.rs  program.rs  program_v4.rs  spend_utils.rs  stake.rs  test_utils.rs  validator_info.rs  vote.rs  wallet.rs
crates/cli/tests/: address_lookup_table.rs  cluster_query.rs  nonce.rs  program.rs  request_airdrop.rs  stake.rs  transfer.rs  validator_info.rs  vote.rs
crates/memo-pinocchio/: Cargo.toml
crates/memo-pinocchio/tests/: memo.rs
crates/spl/: Cargo.toml
crates/spl/src/: bench.rs  clap_app.rs  command.rs  config.rs  lib.rs  main.rs
docs/: book.toml
docs/src/: SUMMARY.md  cosigner.md  index.md  reference.md  signer.md
docs/src/cli/: index.md  solana-cli.md  spl-cli.md
docs/src/defi/: index.md
docs/src/programs/: anchor.md  index.md  native.md
scripts/: cargo-lock.sh  cleanup.sh  create-token.sh  keys.sh  replace.sh  stake.json  stake.sh  test.sh  token.json  token22.json
