[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/carteraMesh/fireblocks-solana"
version = "3.0.11"
authors = ["gh@cartera-mesh.com"]
homepage = "https://github.com/carteraMesh/fireblocks-solana"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
assert_matches = "1.5.0"
anyhow = "1"
agave-feature-set = { version = "=3.0.11" }
agave-reserved-account-keys = { version = "=3.0.11" }
agave-syscalls = { version = "=3.0.11" }
bincode = "1.3.3"
base64 = "0.22.1"
console = "0.16.0"
const_format = { version = "0.2"}
criterion-stats = { version = "0.3"}
crossbeam-channel = { version = "0.5"}
ctrlc = { version = "3", features = ["termination"] }
futures = "0.3"
hex = { version = "0.4"}
humantime = { version  = "2"}
indicatif = "0.18.0"
num-traits = { version = "0.2"}
pretty-hex = {  version = "0.4"}
reqwest = { version = "0.12.23" , features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = {  version = "1"}
home = { version = "0.5"}
Inflector = "0.11.4"
dirs-next = "2.0.0"
chrono = { version = "0.4.41", default-features = false }
log = "0.4.27"
serde = "1.0.219" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde-big-array = "0.5.1"
serde_bytes = "0.11.17"
serde_derive = "1.0.219" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.142"
serde_with = { version = "3.14.0", default-features = false }
serde_yaml = "0.9.34"
tracing = "0.1"
thiserror = "2"
tiny-bip39 = "0.8.2"
tempfile = "3.20.0"
test-case = "3.3.1"
uriparse = "0.6.4"
url = "2.5.4"
rpassword = "7.4"

solana-account-decoder = { version = "=3.0.11" }
solana-address-lookup-table-interface = "=3.0.0"
solana-bincode = { version = "=3.0.0" }
solana-client = { version = "=3.0.11" }
solana-cluster-type = "3.0.0"
solana-commitment-config = "=3.0.0"
solana-compute-budget-interface = "=3.0.0"
solana-config-interface = "2.0.0"
solana-connection-cache = { version = "=3.0.11", default-features = false }
solana-derivation-path = "3.0.0"
solana-epoch-rewards-hasher = { version = "=3.0.0" }
solana-faucet = { version = "=3.0.11" }
solana-feature-gate-interface = "=3.0.0"
solana-loader-v3-interface = "6.1.0"
solana-loader-v4-interface = "3.1.0"
solana-loader-v4-program = { version = "=3.0.11" }
solana-logger = "=3.0.0"
solana-nonce = "=3.0.0"
solana-nonce-account = "=3.0.0"
solana-packet = { version = "3" }
solana-program-runtime = { version = "=3.0.11" }
solana-remote-wallet = {version = "=3.0.11", default-features = false }
solana-rpc = { version = "=3.0.11" }
solana-sbpf = { version = "=0.12.2", default-features = false }
solana-sdk = { version = "=3.0.0", features = ["full", "borsh"] }
solana-sdk-ids = "=3.0.0"
solana-seed-derivable = "=3.0.0"
solana-stake-interface = { version = "2",  features = ["bincode"]}
solana-streamer = { version = "=3.0.11" }
solana-system-interface = { version = "3", features = ["bincode"] }
solana-test-validator = { version = "=3.0.11" }
solana-tps-client = { version = "=3.0.11" }
solana-transaction-status = { version = "=3.0.11" }
solana-transaction-status-client-types = { version = "=3.0.11" }
solana-version = { version = "=3.0.11" }
solana-vote-interface = { version = "3" , features = [ "bincode"] }
solana-zk-sdk = "4"
spl-memo-interface = { version = "2" }

fireblocks-solana-clap-utils = { path = "crates/clap-utils", version = "=3.0.11" }
fireblocks-solana-clap-v3-utils = { path = "crates/clap-v3-utils", version = "=3.0.11" }
fireblocks-solana-cli-config = { path = "crates/cli-config", version = "=3.0.11" }
fireblocks-solana-cli-output = { path = "crates/cli-output", version = "=3.0.11" }
fireblocks-solana-signer = { version = "3" }

[workspace.lints.rust]
warnings = "deny"

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"
