[package]
name = "fireblocks-solana-clap-utils"
description = "Fireblocks Solana utilities for the clap"
documentation = "https://docs.rs/fireblocks-solana-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-machete]
ignored = ["tracing"]

[lib]
name = "solana_clap_utils"
path = "src/lib.rs"

[features]
default = ["fireblocks"]
fireblocks = ["log"]
gpg = ["fireblocks-solana-signer/gpg"]

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = "2.33.0"
fireblocks-solana-signer = { workspace = true }
log = { workspace = true, optional = true }
rpassword = { workspace = true }
solana-cluster-type = { workspace = true }
solana-commitment-config = { workspace = true }
solana-derivation-path = { workspace = true }
solana-remote-wallet = { workspace = true, features = ["default"] }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tracing = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-system-interface = { workspace = true }
tempfile = { workspace = true }
