[package]
name = "fireblocks-solana-clap-v3-utils"
description = "Fireblocks Solana utilities for the clap v3"
documentation = "https://docs.rs/fireblocks-solana-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "solana_clap_v3_utils"

[features]
default = ["fireblocks"]
elgamal = ["dep:solana-zk-sdk"]
fireblocks = ["fireblocks-solana-signer"]
gpg = ["fireblocks-solana-signer/gpg"]

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = { version = "3.2.23", features = ["cargo"] }
fireblocks-solana-signer = { workspace = true, optional = true }
rpassword = { workspace = true }
solana-cluster-type = { workspace = true }
solana-commitment-config = { workspace = true }
solana-derivation-path = { workspace = true }
solana-remote-wallet = { workspace = true, features = ["default"] }
solana-sdk = { workspace = true }
solana-zk-sdk = { workspace = true, optional = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tracing = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-system-interface = { workspace = true }
tempfile = { workspace = true }
