[package]
name = "solana-cli-config"
documentation = "https://docs.rs/solana-cli-config"
version = { workspace = true }
authors = { workspace = true }
description = "forked version with fireblocks signing support"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["fireblocks"]
fireblocks = ["solana-clap-utils/fireblocks"]
gpg = ["solana-clap-utils/gpg"]

[dependencies]
dirs-next = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
solana-clap-utils = { workspace = true }
solana-commitment-config = { workspace = true }
url = { workspace = true }
