[package]
name = "fireblocks-solana-cli-config"
documentation = "https://docs.rs/fireblocks-solana-cli-config"
version = { workspace = true }
authors = { workspace = true }
description = "forked version with fireblocks signing support"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "solana_cli_config"
path = "src/lib.rs"

[features]
default = ["fireblocks"]
fireblocks = []
gpg = ["fireblocks-solana-clap-utils/gpg"]

[dependencies]
dirs-next = { workspace = true }
fireblocks-solana-clap-utils = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
solana-commitment-config = { workspace = true }
url = { workspace = true }
