[package]
name = "solana-cli"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/solana-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-machete]
ignored = ["solana-connection-cache"]

[[bin]]
name = "solana"
path = "src/main.rs"

[features]
default = ["fireblocks"]
fireblocks = ["solana-clap-utils/fireblocks"]
gpg = ["solana-clap-utils/gpg"]

[dependencies]
agave-feature-set = { workspace = true }
agave-syscalls = { workspace = true }
bincode = { workspace = true }
clap = "2.33.0"
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-cli-output = { workspace = true }
solana-client = { workspace = true }
solana-cluster-type = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true, features = ["borsh"] }
solana-config-interface = { workspace = true }
solana-connection-cache = { workspace = true }
solana-feature-gate-interface = { workspace = true, features = ["bincode"] }
solana-loader-v3-interface = { workspace = true, features = ["bincode"] }
solana-loader-v4-interface = { workspace = true }
solana-loader-v4-program = { workspace = true }
solana-logger = { workspace = true }
solana-nonce = { workspace = true }
solana-packet = { workspace = true }
solana-program-runtime = { workspace = true }
solana-remote-wallet = { workspace = true, features = ["default"] }
solana-sbpf = { workspace = true, features = ["jit"] }
solana-sdk = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-stake-interface = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-tps-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
solana-version = { workspace = true }
solana-vote-interface = { workspace = true }
spl-memo-interface = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-faucet = { workspace = true }
solana-nonce-account = { workspace = true }
solana-rpc = { workspace = true }
solana-streamer = { workspace = true }
solana-test-validator = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
