[package]
name = "fireblocks-spl-token-cli"
version = "5.5.0"
description = "SPL-Token Command-line Utility with Fireblocks signing support"
documentation = "https://docs.rs/fireblocks-spl-token-cli"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "spl-token"
path = "src/main.rs"

[features]
default = ["fireblocks"]
fireblocks = []
gpg = [
    "fireblocks-solana-clap-v3-utils/gpg",
    "fireblocks-solana-cli-config/gpg",
    "fireblocks-solana-cli-output/gpg",
]

[dependencies]
base64 = { workspace = true }
clap = "3.2.23"
console = { workspace = true }
fireblocks-solana-clap-v3-utils = { workspace = true }
fireblocks-solana-cli-config = { workspace = true }
fireblocks-solana-cli-output = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-logger = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account-interface = { version = "2.0.0" }
spl-pod = { version = "0.7.1" }
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-token-2022-interface = { version = "2.0.0" }
spl-token-client = { version = "0.18.0" }
spl-token-confidential-transfer-proof-generation = { version = "0.5.1" }
spl-token-group-interface = { version = "0.7.0" }
spl-token-interface = "2.0.0"
spl-token-metadata-interface = { version = "0.8.0" }
strum = "0.27"
strum_macros = "0.27"
tokio = "1.48"

# [build-dependencies]
# walkdir = "2"

[dev-dependencies]
assert_cmd = "2.1.1"
libtest-mimic = "0.8"
# serial_test = "3.2.0"
solana-nonce = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-test-validator = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "command"
path = "tests/command.rs"
harness = false
